--- a/welcome.html
+++ b/welcome.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="Container">
+<div class="container">
   <div id="topText" class="top-text">This is for you</div>
 
   <!-- Emoji Envelope -->
